# news-credibility

./: .gitignore  LICENSE  README.md  analysis.ipynb  data_exploration.ipynb  example_article.md  pyproject.toml
data/processed/: liar_binary.csv
models/: dummy_baseline.joblib  embedding_gbm.joblib  embedding_logreg.joblib  tfidf_logreg.joblib  transformer_or_embeddings.joblib
reports/: bertopic_topic_risk.csv  error_analysis.md  metrics_summary.csv  tfidf_example_explanations.csv  tfidf_top_ngrams.csv
src/: fact_check.py
src/models/: __init__.py  dummy_baseline.py  embedding_gbm.py  embedding_logreg.py  tfidf_logreg.py
tests/: test_fact_check_cli.py  test_model_modules.py  test_processed_data_contract.py  test_report_artifacts.py
