[project]
name = "news-credibility"
version = "0.1.0"
description = "News binary credibility classification on LIAR dataset"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "requests",
    "joblib",
    "jupyter",
    "notebook",
    "bertopic",
    "sentence-transformers",
    "umap-learn",
    "hdbscan",
    "xgboost>=3.2.0",
    "nltk>=3.9.4",
]

[dependency-groups]
dev = [
    "pytest",
]
