[project]
name = "news-credibility"
version = "0.5.0"
description = "News binary credibility classification on LIAR dataset"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "requests",
    "joblib",
    "jupyter",
    "notebook",
    "sentence-transformers",
    "nltk>=3.9.4",
]

[dependency-groups]
dev = [
    "pytest",
]
